<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateDiet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <!--Header-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/DietPlan"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Diet Name Spinner-->

        <!--Time-->
        <Spinner
            android:id="@+id/dietName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDietTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DietTime"
                android:inputType="time"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Date-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDietDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DietDate"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Diet-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDietBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Diet"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UpdateDiet"
            android:onClick="UpdateDiet"/>

    </LinearLayout>

</ScrollView>