<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDiet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <!--Header-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/DietPlan"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Meal Of the Day-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edMealOfDay"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal_of_the_day"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/custom_input"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Meal-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDietBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/custom_input"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollHorizontally="false"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!--Date-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDietDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DietDate"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/custom_input"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Time-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDietTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DietTime"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/custom_input"
                android:inputType="textMultiLine"
                android:onClick="popTimePicker"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DietSave"
            android:onClick="SaveDiet"
            android:padding="5dp"/>

    </LinearLayout>
</ScrollView>